# tuls

./: Makefile  README.md  pyproject.toml
data/: all_degrees.json  certificates_2024.json  certificates_until_2023.json  mat_computacao_engenharia_degrees.json  mat_engenharia_computacao.json  matpt_2024.json  matpt_all.json  test_scraper.json
tuls/: apnor_constants.py  apnor_resultados.py
tuls/apnor_scraper/: apnor_constants.py  apnor_resultados.py
tuls/dges_lic_scraper/: dges_lic_constants.py  dges_lic_scraper.py
