[tool.poetry]
name = "tuls"
version = "0.1.0"
description = ""
authors = ["lipeeeee <filipe.pereirafga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
